--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="/reset.css" rel="stylesheet">
     <link href="/main.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
